--- a/estilos/style-phone.css
+++ b/estilos/style-phone.css
@@ -105,8 +105,9 @@ div#rolagem2{
 
 .texto-rolagem2 h1{
   color: #f47ad3;
-  font-size: 4em;
+  font-size: 3em;
   font-weight: 600;
+  text-align: center;
 }
 
 .texto-rolagem2 p{
