--- a/estilos/style-phone.css
+++ b/estilos/style-phone.css
@@ -72,18 +72,13 @@ li{
 
 span{
   text-align: center;
-  display: flex;
-  justify-content: center;
 }
 
 span#menu{
-  background-color: #f47ad3;
-  border-radius: 18px;
   width: 30px;
   height: 30px;
   cursor: pointer;
-  display: flex;
-  align-items: center;
+  padding-top: 5px;
 }
 
 menu > ul > li > a{
